--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-# thinktv10.github.io
-i love ice
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
