--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+  <head>
+    <title>HTML Backgorund Color</title>
+ </head>
+ <body style="background-color:grey;">
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>Welcome to my new webite</p>
