--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>HTML Backgorund Color</title>
  </head>
- <body style="background-color:grey;">
+ <body style="background-color:rgb(0, 246, 135);">
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>Welcome to my new webite</p>
