--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body style="background-color:rgb(17, 17, 17);">
 <h1 style="color:rgb(255, 255, 255);">Welcome</h1>
 <p style="color:rgb(255, 255, 255);">I hope you like it.</p>
-<p>Welcome to my new webite</p>
+<p style="color:rgb(255, 255, 255)">Welcome to my new webite</p>
 <a href="https://www.google.com/">Click here</a>
 </body>
 </html>
